5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1806_770.log
== TEST (2019-06-26 21:48:35) 
-- CODE:
from numpy import *
p1 = array(eval(input("Digite a palavra 1: ")))
#p2 = array(eval(input("Digite a palavra 2: ")))
p1 = p1.upper()
p2 = p2.upper()
v1 = zeros(26, dyte=int)
for i in p1:
	if(i == "A"):
		v1[0] = v1[0] + 1
	elif(i == "B"):
		v1[1] = v1[1] + 1
	elif(i == "C"):
		v1[2] = v1[2] + 1
	elif(i == "D"):
		v1[3] = v1[3] + 1
	elif(i == "E"):
		v1[4] = v1[4] + 1
	elif(i == "F"):
		v1[5] = v1[5] + 1
	elif(i == "G"):
		v1[6] = v1[6] + 1
	elif(i == "H"):
		v1[7] = v1[7] + 1
	elif(i == "I"):
		v1[8] = v1[8] + 1
	elif(i == "J"):
		v1[9] = v1[9] + 1
	elif(i == "K"):
		v1[10] = v1[10] + 1
	elif(i == "L"):
		v1[11] = v1[11] + 1
	elif(i == "M"):
		v1[12] = v1[12] + 1
	elif(i == "N"):
		v1[13] = v1[13] + 1
	elif(i == "O"):
		v1[14] = v1[14] + 1
	elif(i == "P"):
		v1[15] = v1[15] + 1
	elif(i == "Q"):
		v1[16] = v1[16] + 1
	elif(i == "R"):
		v1[17] = v1[17] + 1
	elif(i == "S"):
		v1[18] = v1[18] + 1
	elif(i == "T"):
		v1[19] = v1[19] + 1
	elif(i == "U"):
		v1[20] = v1[20] + 1
	elif(i == "V"):
		v1[21] = v1[21] + 1
	elif(i == "W"):
		v1[22] = v1[22] + 1
	elif(i == "X"):
		v1[23] = v1[23] + 1
	elif(i == "Y"):
		v1[24] = v1[24] + 1
	elif(i == "Z"):
		v1[25] = v1[25] + 1
print(v1)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 21:48:47) 
-- CODE:
from numpy import *
p1 = array(eval(input("Digite a palavra 1: ")))
#p2 = array(eval(input("Digite a palavra 2: ")))
p1 = p1.upper()
p2 = p2.upper()
v1 = zeros(26, dyte=int)
for i in p1:
	if(i == "A"):
		v1[0] = v1[0] + 1
	elif(i == "B"):
		v1[1] = v1[1] + 1
	elif(i == "C"):
		v1[2] = v1[2] + 1
	elif(i == "D"):
		v1[3] = v1[3] + 1
	elif(i == "E"):
		v1[4] = v1[4] + 1
	elif(i == "F"):
		v1[5] = v1[5] + 1
	elif(i == "G"):
		v1[6] = v1[6] + 1
	elif(i == "H"):
		v1[7] = v1[7] + 1
	elif(i == "I"):
		v1[8] = v1[8] + 1
	elif(i == "J"):
		v1[9] = v1[9] + 1
	elif(i == "K"):
		v1[10] = v1[10] + 1
	elif(i == "L"):
		v1[11] = v1[11] + 1
	elif(i == "M"):
		v1[12] = v1[12] + 1
	elif(i == "N"):
		v1[13] = v1[13] + 1
	elif(i == "O"):
		v1[14] = v1[14] + 1
	elif(i == "P"):
		v1[15] = v1[15] + 1
	elif(i == "Q"):
		v1[16] = v1[16] + 1
	elif(i == "R"):
		v1[17] = v1[17] + 1
	elif(i == "S"):
		v1[18] = v1[18] + 1
	elif(i == "T"):
		v1[19] = v1[19] + 1
	elif(i == "U"):
		v1[20] = v1[20] + 1
	elif(i == "V"):
		v1[21] = v1[21] + 1
	elif(i == "W"):
		v1[22] = v1[22] + 1
	elif(i == "X"):
		v1[23] = v1[23] + 1
	elif(i == "Y"):
		v1[24] = v1[24] + 1
	elif(i == "Z"):
		v1[25] = v1[25] + 1
print(v1)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 21:49:29) 
-- CODE:
from numpy import *
p1 = input("Digite a palavra 1: ")
#p2 = input("Digite a palavra 2: ")
p1 = p1.upper()
p2 = p2.upper()
v1 = zeros(26, dyte=int)
for i in p1:
	if(i == "A"):
		v1[0] = v1[0] + 1
	elif(i == "B"):
		v1[1] = v1[1] + 1
	elif(i == "C"):
		v1[2] = v1[2] + 1
	elif(i == "D"):
		v1[3] = v1[3] + 1
	elif(i == "E"):
		v1[4] = v1[4] + 1
	elif(i == "F"):
		v1[5] = v1[5] + 1
	elif(i == "G"):
		v1[6] = v1[6] + 1
	elif(i == "H"):
		v1[7] = v1[7] + 1
	elif(i == "I"):
		v1[8] = v1[8] + 1
	elif(i == "J"):
		v1[9] = v1[9] + 1
	elif(i == "K"):
		v1[10] = v1[10] + 1
	elif(i == "L"):
		v1[11] = v1[11] + 1
	elif(i == "M"):
		v1[12] = v1[12] + 1
	elif(i == "N"):
		v1[13] = v1[13] + 1
	elif(i == "O"):
		v1[14] = v1[14] + 1
	elif(i == "P"):
		v1[15] = v1[15] + 1
	elif(i == "Q"):
		v1[16] = v1[16] + 1
	elif(i == "R"):
		v1[17] = v1[17] + 1
	elif(i == "S"):
		v1[18] = v1[18] + 1
	elif(i == "T"):
		v1[19] = v1[19] + 1
	elif(i == "U"):
		v1[20] = v1[20] + 1
	elif(i == "V"):
		v1[21] = v1[21] + 1
	elif(i == "W"):
		v1[22] = v1[22] + 1
	elif(i == "X"):
		v1[23] = v1[23] + 1
	elif(i == "Y"):
		v1[24] = v1[24] + 1
	elif(i == "Z"):
		v1[25] = v1[25] + 1
print(v1)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 21:49:50) 
-- CODE:
from numpy import *
p1 = input("Digite a palavra 1: ")
#p2 = input("Digite a palavra 2: ")
p1 = p1.upper()
#p2 = p2.upper()
v1 = zeros(26, dyte=int)
for i in p1:
	if(i == "A"):
		v1[0] = v1[0] + 1
	elif(i == "B"):
		v1[1] = v1[1] + 1
	elif(i == "C"):
		v1[2] = v1[2] + 1
	elif(i == "D"):
		v1[3] = v1[3] + 1
	elif(i == "E"):
		v1[4] = v1[4] + 1
	elif(i == "F"):
		v1[5] = v1[5] + 1
	elif(i == "G"):
		v1[6] = v1[6] + 1
	elif(i == "H"):
		v1[7] = v1[7] + 1
	elif(i == "I"):
		v1[8] = v1[8] + 1
	elif(i == "J"):
		v1[9] = v1[9] + 1
	elif(i == "K"):
		v1[10] = v1[10] + 1
	elif(i == "L"):
		v1[11] = v1[11] + 1
	elif(i == "M"):
		v1[12] = v1[12] + 1
	elif(i == "N"):
		v1[13] = v1[13] + 1
	elif(i == "O"):
		v1[14] = v1[14] + 1
	elif(i == "P"):
		v1[15] = v1[15] + 1
	elif(i == "Q"):
		v1[16] = v1[16] + 1
	elif(i == "R"):
		v1[17] = v1[17] + 1
	elif(i == "S"):
		v1[18] = v1[18] + 1
	elif(i == "T"):
		v1[19] = v1[19] + 1
	elif(i == "U"):
		v1[20] = v1[20] + 1
	elif(i == "V"):
		v1[21] = v1[21] + 1
	elif(i == "W"):
		v1[22] = v1[22] + 1
	elif(i == "X"):
		v1[23] = v1[23] + 1
	elif(i == "Y"):
		v1[24] = v1[24] + 1
	elif(i == "Z"):
		v1[25] = v1[25] + 1
print(v1)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 21:50:25) 
-- CODE:
from numpy import *
p1 = input("Digite a palavra 1: ")
#p2 = input("Digite a palavra 2: ")
p1 = p1.upper()
#p2 = p2.upper()
v1 = zeros(26, dtype=int)
for i in p1:
	if(i == "A"):
		v1[0] = v1[0] + 1
	elif(i == "B"):
		v1[1] = v1[1] + 1
	elif(i == "C"):
		v1[2] = v1[2] + 1
	elif(i == "D"):
		v1[3] = v1[3] + 1
	elif(i == "E"):
		v1[4] = v1[4] + 1
	elif(i == "F"):
		v1[5] = v1[5] + 1
	elif(i == "G"):
		v1[6] = v1[6] + 1
	elif(i == "H"):
		v1[7] = v1[7] + 1
	elif(i == "I"):
		v1[8] = v1[8] + 1
	elif(i == "J"):
		v1[9] = v1[9] + 1
	elif(i == "K"):
		v1[10] = v1[10] + 1
	elif(i == "L"):
		v1[11] = v1[11] + 1
	elif(i == "M"):
		v1[12] = v1[12] + 1
	elif(i == "N"):
		v1[13] = v1[13] + 1
	elif(i == "O"):
		v1[14] = v1[14] + 1
	elif(i == "P"):
		v1[15] = v1[15] + 1
	elif(i == "Q"):
		v1[16] = v1[16] + 1
	elif(i == "R"):
		v1[17] = v1[17] + 1
	elif(i == "S"):
		v1[18] = v1[18] + 1
	elif(i == "T"):
		v1[19] = v1[19] + 1
	elif(i == "U"):
		v1[20] = v1[20] + 1
	elif(i == "V"):
		v1[21] = v1[21] + 1
	elif(i == "W"):
		v1[22] = v1[22] + 1
	elif(i == "X"):
		v1[23] = v1[23] + 1
	elif(i == "Y"):
		v1[24] = v1[24] + 1
	elif(i == "Z"):
		v1[25] = v1[25] + 1
print(v1)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:01:10) 
-- CODE:
from numpy import *
p1 = input("Digite a palavra 1: ")
p2 = input("Digite a palavra 2: ")
p1 = p1.upper()
p2 = p2.upper()
v1 = zeros(26, dtype=int)
for i in p1:
	if(i == "A"):
		v1[0] = v1[0] + 1
	elif(i == "B"):
		v1[1] = v1[1] + 1
	elif(i == "C"):
		v1[2] = v1[2] + 1
	elif(i == "D"):
		v1[3] = v1[3] + 1
	elif(i == "E"):
		v1[4] = v1[4] + 1
	elif(i == "F"):
		v1[5] = v1[5] + 1
	elif(i == "G"):
		v1[6] = v1[6] + 1
	elif(i == "H"):
		v1[7] = v1[7] + 1
	elif(i == "I"):
		v1[8] = v1[8] + 1
	elif(i == "J"):
		v1[9] = v1[9] + 1
	elif(i == "K"):
		v1[10] = v1[10] + 1
	elif(i == "L"):
		v1[11] = v1[11] + 1
	elif(i == "M"):
		v1[12] = v1[12] + 1
	elif(i == "N"):
		v1[13] = v1[13] + 1
	elif(i == "O"):
		v1[14] = v1[14] + 1
	elif(i == "P"):
		v1[15] = v1[15] + 1
	elif(i == "Q"):
		v1[16] = v1[16] + 1
	elif(i == "R"):
		v1[17] = v1[17] + 1
	elif(i == "S"):
		v1[18] = v1[18] + 1
	elif(i == "T"):
		v1[19] = v1[19] + 1
	elif(i == "U"):
		v1[20] = v1[20] + 1
	elif(i == "V"):
		v1[21] = v1[21] + 1
	elif(i == "W"):
		v1[22] = v1[22] + 1
	elif(i == "X"):
		v1[23] = v1[23] + 1
	elif(i == "Y"):
		v1[24] = v1[24] + 1
	elif(i == "Z"):
		v1[25] = v1[25] + 1
v2 = zeros(26, dtype=int)
for i in p2:
	if(i == "A"):
		v1[0] = v2[0] - 1
	elif(i == "B"):
		v1[1] = v2[1] - 1
	elif(i == "C"):
		v1[2] = v2[2] - 1
	elif(i == "D"):
		v1[3] = v2[3] - 1
	elif(i == "E"):
		v1[4] = v1[4] - 1
	elif(i == "F"):
		v1[5] = v1[5] - 1
	elif(i == "G"):
		v1[6] = v1[6] - 1
	elif(i == "H"):
		v1[7] = v1[7] - 1
	elif(i == "I"):
		v1[8] = v1[8] - 1
	elif(i == "J"):
		v1[9] = v1[9] - 1
	elif(i == "K"):
		v1[10] = v1[10] - 1
	elif(i == "L"):
		v1[11] = v1[11] - 1
	elif(i == "M"):
		v1[12] = v1[12] - 1
	elif(i == "N"):
		v1[13] = v1[13] - 1
	elif(i == "O"):
		v1[14] = v1[14] - 1
	elif(i == "P"):
		v1[15] = v1[15] - 1
	elif(i == "Q"):
		v1[16] = v1[16] - 1
	elif(i == "R"):
		v1[17] = v1[17] - 1
	elif(i == "S"):
		v1[18] = v1[18] - 1
	elif(i == "T"):
		v1[19] = v1[19] - 1
	elif(i == "U"):
		v1[20] = v1[20] - 1
	elif(i == "V"):
		v1[21] = v1[21] - 1
	elif(i == "W"):
		v1[22] = v1[22] - 1
	elif(i == "X"):
		v1[23] = v1[23] - 1
	elif(i == "Y"):
		v1[24] = v1[24] - 1
	elif(i == "Z"):
		v1[25] = v1[25] - 1

i = 0		
while (i < len(v1)):
	if(v1[i] == 0):
		i = i+1
	else:
		print(v1)
		print(0)
print(v1)
print(1)
		
		print(v1)	
-- ERROR:
File "XXXX", line 125
    print(v1)	
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:01:31) 
-- CODE:
from numpy import *
p1 = input("Digite a palavra 1: ")
p2 = input("Digite a palavra 2: ")
p1 = p1.upper()
p2 = p2.upper()
v1 = zeros(26, dtype=int)
for i in p1:
	if(i == "A"):
		v1[0] = v1[0] + 1
	elif(i == "B"):
		v1[1] = v1[1] + 1
	elif(i == "C"):
		v1[2] = v1[2] + 1
	elif(i == "D"):
		v1[3] = v1[3] + 1
	elif(i == "E"):
		v1[4] = v1[4] + 1
	elif(i == "F"):
		v1[5] = v1[5] + 1
	elif(i == "G"):
		v1[6] = v1[6] + 1
	elif(i == "H"):
		v1[7] = v1[7] + 1
	elif(i == "I"):
		v1[8] = v1[8] + 1
	elif(i == "J"):
		v1[9] = v1[9] + 1
	elif(i == "K"):
		v1[10] = v1[10] + 1
	elif(i == "L"):
		v1[11] = v1[11] + 1
	elif(i == "M"):
		v1[12] = v1[12] + 1
	elif(i == "N"):
		v1[13] = v1[13] + 1
	elif(i == "O"):
		v1[14] = v1[14] + 1
	elif(i == "P"):
		v1[15] = v1[15] + 1
	elif(i == "Q"):
		v1[16] = v1[16] + 1
	elif(i == "R"):
		v1[17] = v1[17] + 1
	elif(i == "S"):
		v1[18] = v1[18] + 1
	elif(i == "T"):
		v1[19] = v1[19] + 1
	elif(i == "U"):
		v1[20] = v1[20] + 1
	elif(i == "V"):
		v1[21] = v1[21] + 1
	elif(i == "W"):
		v1[22] = v1[22] + 1
	elif(i == "X"):
		v1[23] = v1[23] + 1
	elif(i == "Y"):
		v1[24] = v1[24] + 1
	elif(i == "Z"):
		v1[25] = v1[25] + 1
v2 = zeros(26, dtype=int)
for i in p2:
	if(i == "A"):
		v1[0] = v2[0] - 1
	elif(i == "B"):
		v1[1] = v2[1] - 1
	elif(i == "C"):
		v1[2] = v2[2] - 1
	elif(i == "D"):
		v1[3] = v2[3] - 1
	elif(i == "E"):
		v1[4] = v1[4] - 1
	elif(i == "F"):
		v1[5] = v1[5] - 1
	elif(i == "G"):
		v1[6] = v1[6] - 1
	elif(i == "H"):
		v1[7] = v1[7] - 1
	elif(i == "I"):
		v1[8] = v1[8] - 1
	elif(i == "J"):
		v1[9] = v1[9] - 1
	elif(i == "K"):
		v1[10] = v1[10] - 1
	elif(i == "L"):
		v1[11] = v1[11] - 1
	elif(i == "M"):
		v1[12] = v1[12] - 1
	elif(i == "N"):
		v1[13] = v1[13] - 1
	elif(i == "O"):
		v1[14] = v1[14] - 1
	elif(i == "P"):
		v1[15] = v1[15] - 1
	elif(i == "Q"):
		v1[16] = v1[16] - 1
	elif(i == "R"):
		v1[17] = v1[17] - 1
	elif(i == "S"):
		v1[18] = v1[18] - 1
	elif(i == "T"):
		v1[19] = v1[19] - 1
	elif(i == "U"):
		v1[20] = v1[20] - 1
	elif(i == "V"):
		v1[21] = v1[21] - 1
	elif(i == "W"):
		v1[22] = v1[22] - 1
	elif(i == "X"):
		v1[23] = v1[23] - 1
	elif(i == "Y"):
		v1[24] = v1[24] - 1
	elif(i == "Z"):
		v1[25] = v1[25] - 1

i = 0		
while (i < len(v1)):
	if(v1[i] == 0):
		i = i+1
	else:
		print(v1)
		print(0)
print(v1)
print(1)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:23:34) 
-- CODE:
from numpy import *
p1 = input("Digite a palavra 1: ")
p2 = input("Digite a palavra 2: ")
p1 = p1.upper()
p2 = p2.upper()
v1 = zeros(26, dtype=int)
for i in p1:
	if(i == "A"):
		v1[0] = v1[0] + 1
	elif(i == "B"):
		v1[1] = v1[1] + 1
	elif(i == "C"):
		v1[2] = v1[2] + 1
	elif(i == "D"):
		v1[3] = v1[3] + 1
	elif(i == "E"):
		v1[4] = v1[4] + 1
	elif(i == "F"):
		v1[5] = v1[5] + 1
	elif(i == "G"):
		v1[6] = v1[6] + 1
	elif(i == "H"):
		v1[7] = v1[7] + 1
	elif(i == "I"):
		v1[8] = v1[8] + 1
	elif(i == "J"):
		v1[9] = v1[9] + 1
	elif(i == "K"):
		v1[10] = v1[10] + 1
	elif(i == "L"):
		v1[11] = v1[11] + 1
	elif(i == "M"):
		v1[12] = v1[12] + 1
	elif(i == "N"):
		v1[13] = v1[13] + 1
	elif(i == "O"):
		v1[14] = v1[14] + 1
	elif(i == "P"):
		v1[15] = v1[15] + 1
	elif(i == "Q"):
		v1[16] = v1[16] + 1
	elif(i == "R"):
		v1[17] = v1[17] + 1
	elif(i == "S"):
		v1[18] = v1[18] + 1
	elif(i == "T"):
		v1[19] = v1[19] + 1
	elif(i == "U"):
		v1[20] = v1[20] + 1
	elif(i == "V"):
		v1[21] = v1[21] + 1
	elif(i == "W"):
		v1[22] = v1[22] + 1
	elif(i == "X"):
		v1[23] = v1[23] + 1
	elif(i == "Y"):
		v1[24] = v1[24] + 1
	elif(i == "Z"):
		v1[25] = v1[25] + 1
v2 = zeros(26, dtype=int)
for i in p2:
	if(i == "A"):
		v1[0] = v2[0] - 1
	elif(i == "B"):
		v1[1] = v2[1] - 1
	elif(i == "C"):
		v1[2] = v2[2] - 1
	elif(i == "D"):
		v1[3] = v2[3] - 1
	elif(i == "E"):
		v1[4] = v1[4] - 1
	elif(i == "F"):
		v1[5] = v1[5] - 1
	elif(i == "G"):
		v1[6] = v1[6] - 1
	elif(i == "H"):
		v1[7] = v1[7] - 1
	elif(i == "I"):
		v1[8] = v1[8] - 1
	elif(i == "J"):
		v1[9] = v1[9] - 1
	elif(i == "K"):
		v1[10] = v1[10] - 1
	elif(i == "L"):
		v1[11] = v1[11] - 1
	elif(i == "M"):
		v1[12] = v1[12] - 1
	elif(i == "N"):
		v1[13] = v1[13] - 1
	elif(i == "O"):
		v1[14] = v1[14] - 1
	elif(i == "P"):
		v1[15] = v1[15] - 1
	elif(i == "Q"):
		v1[16] = v1[16] - 1
	elif(i == "R"):
		v1[17] = v1[17] - 1
	elif(i == "S"):
		v1[18] = v1[18] - 1
	elif(i == "T"):
		v1[19] = v1[19] - 1
	elif(i == "U"):
		v1[20] = v1[20] - 1
	elif(i == "V"):
		v1[21] = v1[21] - 1
	elif(i == "W"):
		v1[22] = v1[22] - 1
	elif(i == "X"):
		v1[23] = v1[23] - 1
	elif(i == "Y"):
		v1[24] = v1[24] - 1
	elif(i == "Z"):
		v1[25] = v1[25] - 1

i = 0		
while (i < len(v1)):
	if(v1[i] == 0):
		i = i+1
	else:
		print(v1)
		print(0)
print(v1)
print(1)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 18:56:47) 
-- CODE:
from numpy import *
p1 = input("Digite a palavra 1: ")
p2 = input("Digite a palavra 2: ")
p1 = p1.upper()
p2 = p2.upper()
v1 = zeros(26, dtype=int)
for i in p1:
	if(i == "A"):
		v1[0] = v1[0] + 1
	elif(i == "B"):
		v1[1] = v1[1] + 1
	elif(i == "C"):
		v1[2] = v1[2] + 1
	elif(i == "D"):
		v1[3] = v1[3] + 1
	elif(i == "E"):
		v1[4] = v1[4] + 1
	elif(i == "F"):
		v1[5] = v1[5] + 1
	elif(i == "G"):
		v1[6] = v1[6] + 1
	elif(i == "H"):
		v1[7] = v1[7] + 1
	elif(i == "I"):
		v1[8] = v1[8] + 1
	elif(i == "J"):
		v1[9] = v1[9] + 1
	elif(i == "K"):
		v1[10] = v1[10] + 1
	elif(i == "L"):
		v1[11] = v1[11] + 1
	elif(i == "M"):
		v1[12] = v1[12] + 1
	elif(i == "N"):
		v1[13] = v1[13] + 1
	elif(i == "O"):
		v1[14] = v1[14] + 1
	elif(i == "P"):
		v1[15] = v1[15] + 1
	elif(i == "Q"):
		v1[16] = v1[16] + 1
	elif(i == "R"):
		v1[17] = v1[17] + 1
	elif(i == "S"):
		v1[18] = v1[18] + 1
	elif(i == "T"):
		v1[19] = v1[19] + 1
	elif(i == "U"):
		v1[20] = v1[20] + 1
	elif(i == "V"):
		v1[21] = v1[21] + 1
	elif(i == "W"):
		v1[22] = v1[22] + 1
	elif(i == "X"):
		v1[23] = v1[23] + 1
	elif(i == "Y"):
		v1[24] = v1[24] + 1
	elif(i == "Z"):
		v1[25] = v1[25] + 1
v2 = zeros(26, dtype=int)
for i in p2:
	if(i == "A"):
		v1[0] = v2[0] - 1
	elif(i == "B"):
		v1[1] = v2[1] - 1
	elif(i == "C"):
		v1[2] = v2[2] - 1
	elif(i == "D"):
		v1[3] = v2[3] - 1
	elif(i == "E"):
		v1[4] = v1[4] - 1
	elif(i == "F"):
		v1[5] = v1[5] - 1
	elif(i == "G"):
		v1[6] = v1[6] - 1
	elif(i == "H"):
		v1[7] = v1[7] - 1
	elif(i == "I"):
		v1[8] = v1[8] - 1
	elif(i == "J"):
		v1[9] = v1[9] - 1
	elif(i == "K"):
		v1[10] = v1[10] - 1
	elif(i == "L"):
		v1[11] = v1[11] - 1
	elif(i == "M"):
		v1[12] = v1[12] - 1
	elif(i == "N"):
		v1[13] = v1[13] - 1
	elif(i == "O"):
		v1[14] = v1[14] - 1
	elif(i == "P"):
		v1[15] = v1[15] - 1
	elif(i == "Q"):
		v1[16] = v1[16] - 1
	elif(i == "R"):
		v1[17] = v1[17] - 1
	elif(i == "S"):
		v1[18] = v1[18] - 1
	elif(i == "T"):
		v1[19] = v1[19] - 1
	elif(i == "U"):
		v1[20] = v1[20] - 1
	elif(i == "V"):
		v1[21] = v1[21] - 1
	elif(i == "W"):
		v1[22] = v1[22] - 1
	elif(i == "X"):
		v1[23] = v1[23] - 1
	elif(i == "Y"):
		v1[24] = v1[24] - 1
	elif(i == "Z"):
		v1[25] = v1[25] - 1
p=0
n=0
i = 0		
for num in v1:
	if(num > 0):
		p = p+1
	elif(num < 0):
		n = n+1
if(p+n >0):
	print(v1)
	print(0)
else:
	print(v1)
	print(1)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 18:58:00) 
-- CODE:
from numpy import *
p1 = input("Digite a palavra 1: ")
p2 = input("Digite a palavra 2: ")
p1 = p1.upper()
p2 = p2.upper()
v1 = zeros(26, dtype=int)
for i in p1:
	if(i == "A"):
		v1[0] = v1[0] + 1
	elif(i == "B"):
		v1[1] = v1[1] + 1
	elif(i == "C"):
		v1[2] = v1[2] + 1
	elif(i == "D"):
		v1[3] = v1[3] + 1
	elif(i == "E"):
		v1[4] = v1[4] + 1
	elif(i == "F"):
		v1[5] = v1[5] + 1
	elif(i == "G"):
		v1[6] = v1[6] + 1
	elif(i == "H"):
		v1[7] = v1[7] + 1
	elif(i == "I"):
		v1[8] = v1[8] + 1
	elif(i == "J"):
		v1[9] = v1[9] + 1
	elif(i == "K"):
		v1[10] = v1[10] + 1
	elif(i == "L"):
		v1[11] = v1[11] + 1
	elif(i == "M"):
		v1[12] = v1[12] + 1
	elif(i == "N"):
		v1[13] = v1[13] + 1
	elif(i == "O"):
		v1[14] = v1[14] + 1
	elif(i == "P"):
		v1[15] = v1[15] + 1
	elif(i == "Q"):
		v1[16] = v1[16] + 1
	elif(i == "R"):
		v1[17] = v1[17] + 1
	elif(i == "S"):
		v1[18] = v1[18] + 1
	elif(i == "T"):
		v1[19] = v1[19] + 1
	elif(i == "U"):
		v1[20] = v1[20] + 1
	elif(i == "V"):
		v1[21] = v1[21] + 1
	elif(i == "W"):
		v1[22] = v1[22] + 1
	elif(i == "X"):
		v1[23] = v1[23] + 1
	elif(i == "Y"):
		v1[24] = v1[24] + 1
	elif(i == "Z"):
		v1[25] = v1[25] + 1
v2 = zeros(26, dtype=int)
for i in p2:
	if(i == "A"):
		v1[0] = v2[0] - 1
	elif(i == "B"):
		v1[1] = v2[1] - 1
	elif(i == "C"):
		v1[2] = v2[2] - 1
	elif(i == "D"):
		v1[3] = v2[3] - 1
	elif(i == "E"):
		v1[4] = v1[4] - 1
	elif(i == "F"):
		v1[5] = v1[5] - 1
	elif(i == "G"):
		v1[6] = v1[6] - 1
	elif(i == "H"):
		v1[7] = v1[7] - 1
	elif(i == "I"):
		v1[8] = v1[8] - 1
	elif(i == "J"):
		v1[9] = v1[9] - 1
	elif(i == "K"):
		v1[10] = v1[10] - 1
	elif(i == "L"):
		v1[11] = v1[11] - 1
	elif(i == "M"):
		v1[12] = v1[12] - 1
	elif(i == "N"):
		v1[13] = v1[13] - 1
	elif(i == "O"):
		v1[14] = v1[14] - 1
	elif(i == "P"):
		v1[15] = v1[15] - 1
	elif(i == "Q"):
		v1[16] = v1[16] - 1
	elif(i == "R"):
		v1[17] = v1[17] - 1
	elif(i == "S"):
		v1[18] = v1[18] - 1
	elif(i == "T"):
		v1[19] = v1[19] - 1
	elif(i == "U"):
		v1[20] = v1[20] - 1
	elif(i == "V"):
		v1[21] = v1[21] - 1
	elif(i == "W"):
		v1[22] = v1[22] - 1
	elif(i == "X"):
		v1[23] = v1[23] - 1
	elif(i == "Y"):
		v1[24] = v1[24] - 1
	elif(i == "Z"):
		v1[25] = v1[25] - 1
p=0
n=0
i = 0		
for num in v1:
	if(num > 0):
		p = p+1
	elif(num < 0):
		n = n+1
if(p+n >0):
	print(v1)
	print(0)
else:
	print(v1)
	print(1)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 19:28:46) 
-- CODE:
from numpy import *
p1 = input("Digite a palavra 1: ")
p2 = input("Digite a palavra 2: ")
p1 = p1.upper()
p2 = p2.upper()
v1 = zeros(26, dtype=int)
for i in p1:
	if(i == "A"):
		v1[0] = v1[0] + 1
	elif(i == "B"):
		v1[1] = v1[1] + 1
	elif(i == "C"):
		v1[2] = v1[2] + 1
	elif(i == "D"):
		v1[3] = v1[3] + 1
	elif(i == "E"):
		v1[4] = v1[4] + 1
	elif(i == "F"):
		v1[5] = v1[5] + 1
	elif(i == "G"):
		v1[6] = v1[6] + 1
	elif(i == "H"):
		v1[7] = v1[7] + 1
	elif(i == "I"):
		v1[8] = v1[8] + 1
	elif(i == "J"):
		v1[9] = v1[9] + 1
	elif(i == "K"):
		v1[10] = v1[10] + 1
	elif(i == "L"):
		v1[11] = v1[11] + 1
	elif(i == "M"):
		v1[12] = v1[12] + 1
	elif(i == "N"):
		v1[13] = v1[13] + 1
	elif(i == "O"):
		v1[14] = v1[14] + 1
	elif(i == "P"):
		v1[15] = v1[15] + 1
	elif(i == "Q"):
		v1[16] = v1[16] + 1
	elif(i == "R"):
		v1[17] = v1[17] + 1
	elif(i == "S"):
		v1[18] = v1[18] + 1
	elif(i == "T"):
		v1[19] = v1[19] + 1
	elif(i == "U"):
		v1[20] = v1[20] + 1
	elif(i == "V"):
		v1[21] = v1[21] + 1
	elif(i == "W"):
		v1[22] = v1[22] + 1
	elif(i == "X"):
		v1[23] = v1[23] + 1
	elif(i == "Y"):
		v1[24] = v1[24] + 1
	elif(i == "Z"):
		v1[25] = v1[25] + 1
v2 = zeros(26, dtype=int)
for i in p2:
	if(i == "A"):
		v1[0] = v2[0] - 1
	elif(i == "B"):
		v1[1] = v2[1] - 1
	elif(i == "C"):
		v1[2] = v2[2] - 1
	elif(i == "D"):
		v1[3] = v2[3] - 1
	elif(i == "E"):
		v1[4] = v1[4] - 1
	elif(i == "F"):
		v1[5] = v1[5] - 1
	elif(i == "G"):
		v1[6] = v1[6] - 1
	elif(i == "H"):
		v1[7] = v1[7] - 1
	elif(i == "I"):
		v1[8] = v1[8] - 1
	elif(i == "J"):
		v1[9] = v1[9] - 1
	elif(i == "K"):
		v1[10] = v1[10] - 1
	elif(i == "L"):
		v1[11] = v1[11] - 1
	elif(i == "M"):
		v1[12] = v1[12] - 1
	elif(i == "N"):
		v1[13] = v1[13] - 1
	elif(i == "O"):
		v1[14] = v1[14] - 1
	elif(i == "P"):
		v1[15] = v1[15] - 1
	elif(i == "Q"):
		v1[16] = v1[16] - 1
	elif(i == "R"):
		v1[17] = v1[17] - 1
	elif(i == "S"):
		v1[18] = v1[18] - 1
	elif(i == "T"):
		v1[19] = v1[19] - 1
	elif(i == "U"):
		v1[20] = v1[20] - 1
	elif(i == "V"):
		v1[21] = v1[21] - 1
	elif(i == "W"):
		v1[22] = v1[22] - 1
	elif(i == "X"):
		v1[23] = v1[23] - 1
	elif(i == "Y"):
		v1[24] = v1[24] - 1
	elif(i == "Z"):
		v1[25] = v1[25] - 1
p=0
n=0
i = 0		
for num in v1:
	if(num > 0):
		p = p+1
	elif(num < 0):
		n = n+1
if(p+n >0):
	print(v1)
	print(0)
else:
	print(v1)
	print(1)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 19:29:25) 
-- CODE:
from numpy import *
p1 = input("Digite a palavra 1: ")
p2 = input("Digite a palavra 2: ")
p1 = p1.upper()
p2 = p2.upper()
v1 = zeros(26, dtype=int)
for i in p1:
	if(i == "A"):
		v1[0] = v1[0] + 1
	elif(i == "B"):
		v1[1] = v1[1] + 1
	elif(i == "C"):
		v1[2] = v1[2] + 1
	elif(i == "D"):
		v1[3] = v1[3] + 1
	elif(i == "E"):
		v1[4] = v1[4] + 1
	elif(i == "F"):
		v1[5] = v1[5] + 1
	elif(i == "G"):
		v1[6] = v1[6] + 1
	elif(i == "H"):
		v1[7] = v1[7] + 1
	elif(i == "I"):
		v1[8] = v1[8] + 1
	elif(i == "J"):
		v1[9] = v1[9] + 1
	elif(i == "K"):
		v1[10] = v1[10] + 1
	elif(i == "L"):
		v1[11] = v1[11] + 1
	elif(i == "M"):
		v1[12] = v1[12] + 1
	elif(i == "N"):
		v1[13] = v1[13] + 1
	elif(i == "O"):
		v1[14] = v1[14] + 1
	elif(i == "P"):
		v1[15] = v1[15] + 1
	elif(i == "Q"):
		v1[16] = v1[16] + 1
	elif(i == "R"):
		v1[17] = v1[17] + 1
	elif(i == "S"):
		v1[18] = v1[18] + 1
	elif(i == "T"):
		v1[19] = v1[19] + 1
	elif(i == "U"):
		v1[20] = v1[20] + 1
	elif(i == "V"):
		v1[21] = v1[21] + 1
	elif(i == "W"):
		v1[22] = v1[22] + 1
	elif(i == "X"):
		v1[23] = v1[23] + 1
	elif(i == "Y"):
		v1[24] = v1[24] + 1
	elif(i == "Z"):
		v1[25] = v1[25] + 1
v2 = zeros(26, dtype=int)
for i in p2:
	if(i == "A"):
		v1[0] = v2[0] - 1
	elif(i == "B"):
		v1[1] = v2[1] - 1
	elif(i == "C"):
		v1[2] = v2[2] - 1
	elif(i == "D"):
		v1[3] = v2[3] - 1
	elif(i == "E"):
		v1[4] = v1[4] - 1
	elif(i == "F"):
		v1[5] = v1[5] - 1
	elif(i == "G"):
		v1[6] = v1[6] - 1
	elif(i == "H"):
		v1[7] = v1[7] - 1
	elif(i == "I"):
		v1[8] = v1[8] - 1
	elif(i == "J"):
		v1[9] = v1[9] - 1
	elif(i == "K"):
		v1[10] = v1[10] - 1
	elif(i == "L"):
		v1[11] = v1[11] - 1
	elif(i == "M"):
		v1[12] = v1[12] - 1
	elif(i == "N"):
		v1[13] = v1[13] - 1
	elif(i == "O"):
		v1[14] = v1[14] - 1
	elif(i == "P"):
		v1[15] = v1[15] - 1
	elif(i == "Q"):
		v1[16] = v1[16] - 1
	elif(i == "R"):
		v1[17] = v1[17] - 1
	elif(i == "S"):
		v1[18] = v1[18] - 1
	elif(i == "T"):
		v1[19] = v1[19] - 1
	elif(i == "U"):
		v1[20] = v1[20] - 1
	elif(i == "V"):
		v1[21] = v1[21] - 1
	elif(i == "W"):
		v1[22] = v1[22] - 1
	elif(i == "X"):
		v1[23] = v1[23] - 1
	elif(i == "Y"):
		v1[24] = v1[24] - 1
	elif(i == "Z"):
		v1[25] = v1[25] - 1
p=0
n=0
i = 0		
for num in v1:
	if(num > 0):
		p = p+1
	elif(num < 0):
		n = n+1
if(p+n >0):
	print(v1)
	print(0)
else:
	print(v1)
	print(1)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 19:35:17) 
-- CODE:
from numpy import *
p1 = input("Digite a palavra 1: ")
p2 = input("Digite a palavra 2: ")
p1 = p1.upper()
p2 = p2.upper()
v1 = zeros(26, dtype=int)
for i in p1:
	if(i == "A"):
		v1[0] = v1[0] + 1
	elif(i == "B"):
		v1[1] = v1[1] + 1
	elif(i == "C"):
		v1[2] = v1[2] + 1
	elif(i == "D"):
		v1[3] = v1[3] + 1
	elif(i == "E"):
		v1[4] = v1[4] + 1
	elif(i == "F"):
		v1[5] = v1[5] + 1
	elif(i == "G"):
		v1[6] = v1[6] + 1
	elif(i == "H"):
		v1[7] = v1[7] + 1
	elif(i == "I"):
		v1[8] = v1[8] + 1
	elif(i == "J"):
		v1[9] = v1[9] + 1
	elif(i == "K"):
		v1[10] = v1[10] + 1
	elif(i == "L"):
		v1[11] = v1[11] + 1
	elif(i == "M"):
		v1[12] = v1[12] + 1
	elif(i == "N"):
		v1[13] = v1[13] + 1
	elif(i == "O"):
		v1[14] = v1[14] + 1
	elif(i == "P"):
		v1[15] = v1[15] + 1
	elif(i == "Q"):
		v1[16] = v1[16] + 1
	elif(i == "R"):
		v1[17] = v1[17] + 1
	elif(i == "S"):
		v1[18] = v1[18] + 1
	elif(i == "T"):
		v1[19] = v1[19] + 1
	elif(i == "U"):
		v1[20] = v1[20] + 1
	elif(i == "V"):
		v1[21] = v1[21] + 1
	elif(i == "W"):
		v1[22] = v1[22] + 1
	elif(i == "X"):
		v1[23] = v1[23] + 1
	elif(i == "Y"):
		v1[24] = v1[24] + 1
	elif(i == "Z"):
		v1[25] = v1[25] + 1
v2 = zeros(26, dtype=int)
for i in p2:
	if(i == "A"):
		v1[0] = v1[0] - 1
	elif(i == "B"):
		v1[1] = v1[1] - 1
	elif(i == "C"):
		v1[2] = v1[2] - 1
	elif(i == "D"):
		v1[3] = v1[3] - 1
	elif(i == "E"):
		v1[4] = v1[4] - 1
	elif(i == "F"):
		v1[5] = v1[5] - 1
	elif(i == "G"):
		v1[6] = v1[6] - 1
	elif(i == "H"):
		v1[7] = v1[7] - 1
	elif(i == "I"):
		v1[8] = v1[8] - 1
	elif(i == "J"):
		v1[9] = v1[9] - 1
	elif(i == "K"):
		v1[10] = v1[10] - 1
	elif(i == "L"):
		v1[11] = v1[11] - 1
	elif(i == "M"):
		v1[12] = v1[12] - 1
	elif(i == "N"):
		v1[13] = v1[13] - 1
	elif(i == "O"):
		v1[14] = v1[14] - 1
	elif(i == "P"):
		v1[15] = v1[15] - 1
	elif(i == "Q"):
		v1[16] = v1[16] - 1
	elif(i == "R"):
		v1[17] = v1[17] - 1
	elif(i == "S"):
		v1[18] = v1[18] - 1
	elif(i == "T"):
		v1[19] = v1[19] - 1
	elif(i == "U"):
		v1[20] = v1[20] - 1
	elif(i == "V"):
		v1[21] = v1[21] - 1
	elif(i == "W"):
		v1[22] = v1[22] - 1
	elif(i == "X"):
		v1[23] = v1[23] - 1
	elif(i == "Y"):
		v1[24] = v1[24] - 1
	elif(i == "Z"):
		v1[25] = v1[25] - 1
p=0
n=0
i = 0		
for num in v1:
	if(num > 0):
		p = p+1
	elif(num < 0):
		n = n+1
if(p+n >0):
	print(v1)
	print(0)
else:
	print(v1)
	print(1)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 19:35:33) 
-- CODE:
from numpy import *
p1 = input("Digite a palavra 1: ")
p2 = input("Digite a palavra 2: ")
p1 = p1.upper()
p2 = p2.upper()
v1 = zeros(26, dtype=int)
for i in p1:
	if(i == "A"):
		v1[0] = v1[0] + 1
	elif(i == "B"):
		v1[1] = v1[1] + 1
	elif(i == "C"):
		v1[2] = v1[2] + 1
	elif(i == "D"):
		v1[3] = v1[3] + 1
	elif(i == "E"):
		v1[4] = v1[4] + 1
	elif(i == "F"):
		v1[5] = v1[5] + 1
	elif(i == "G"):
		v1[6] = v1[6] + 1
	elif(i == "H"):
		v1[7] = v1[7] + 1
	elif(i == "I"):
		v1[8] = v1[8] + 1
	elif(i == "J"):
		v1[9] = v1[9] + 1
	elif(i == "K"):
		v1[10] = v1[10] + 1
	elif(i == "L"):
		v1[11] = v1[11] + 1
	elif(i == "M"):
		v1[12] = v1[12] + 1
	elif(i == "N"):
		v1[13] = v1[13] + 1
	elif(i == "O"):
		v1[14] = v1[14] + 1
	elif(i == "P"):
		v1[15] = v1[15] + 1
	elif(i == "Q"):
		v1[16] = v1[16] + 1
	elif(i == "R"):
		v1[17] = v1[17] + 1
	elif(i == "S"):
		v1[18] = v1[18] + 1
	elif(i == "T"):
		v1[19] = v1[19] + 1
	elif(i == "U"):
		v1[20] = v1[20] + 1
	elif(i == "V"):
		v1[21] = v1[21] + 1
	elif(i == "W"):
		v1[22] = v1[22] + 1
	elif(i == "X"):
		v1[23] = v1[23] + 1
	elif(i == "Y"):
		v1[24] = v1[24] + 1
	elif(i == "Z"):
		v1[25] = v1[25] + 1
v2 = zeros(26, dtype=int)
for i in p2:
	if(i == "A"):
		v1[0] = v1[0] - 1
	elif(i == "B"):
		v1[1] = v1[1] - 1
	elif(i == "C"):
		v1[2] = v1[2] - 1
	elif(i == "D"):
		v1[3] = v1[3] - 1
	elif(i == "E"):
		v1[4] = v1[4] - 1
	elif(i == "F"):
		v1[5] = v1[5] - 1
	elif(i == "G"):
		v1[6] = v1[6] - 1
	elif(i == "H"):
		v1[7] = v1[7] - 1
	elif(i == "I"):
		v1[8] = v1[8] - 1
	elif(i == "J"):
		v1[9] = v1[9] - 1
	elif(i == "K"):
		v1[10] = v1[10] - 1
	elif(i == "L"):
		v1[11] = v1[11] - 1
	elif(i == "M"):
		v1[12] = v1[12] - 1
	elif(i == "N"):
		v1[13] = v1[13] - 1
	elif(i == "O"):
		v1[14] = v1[14] - 1
	elif(i == "P"):
		v1[15] = v1[15] - 1
	elif(i == "Q"):
		v1[16] = v1[16] - 1
	elif(i == "R"):
		v1[17] = v1[17] - 1
	elif(i == "S"):
		v1[18] = v1[18] - 1
	elif(i == "T"):
		v1[19] = v1[19] - 1
	elif(i == "U"):
		v1[20] = v1[20] - 1
	elif(i == "V"):
		v1[21] = v1[21] - 1
	elif(i == "W"):
		v1[22] = v1[22] - 1
	elif(i == "X"):
		v1[23] = v1[23] - 1
	elif(i == "Y"):
		v1[24] = v1[24] - 1
	elif(i == "Z"):
		v1[25] = v1[25] - 1
p=0
n=0
i = 0		
for num in v1:
	if(num > 0):
		p = p+1
	elif(num < 0):
		n = n+1
if(p+n >0):
	print(v1)
	print(0)
else:
	print(v1)
	print(1)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 19:35:58) 
-- CODE:
from numpy import *
p1 = input("Digite a palavra 1: ")
p2 = input("Digite a palavra 2: ")
p1 = p1.upper()
p2 = p2.upper()
v1 = zeros(26, dtype=int)
for i in p1:
	if(i == "A"):
		v1[0] = v1[0] + 1
	elif(i == "B"):
		v1[1] = v1[1] + 1
	elif(i == "C"):
		v1[2] = v1[2] + 1
	elif(i == "D"):
		v1[3] = v1[3] + 1
	elif(i == "E"):
		v1[4] = v1[4] + 1
	elif(i == "F"):
		v1[5] = v1[5] + 1
	elif(i == "G"):
		v1[6] = v1[6] + 1
	elif(i == "H"):
		v1[7] = v1[7] + 1
	elif(i == "I"):
		v1[8] = v1[8] + 1
	elif(i == "J"):
		v1[9] = v1[9] + 1
	elif(i == "K"):
		v1[10] = v1[10] + 1
	elif(i == "L"):
		v1[11] = v1[11] + 1
	elif(i == "M"):
		v1[12] = v1[12] + 1
	elif(i == "N"):
		v1[13] = v1[13] + 1
	elif(i == "O"):
		v1[14] = v1[14] + 1
	elif(i == "P"):
		v1[15] = v1[15] + 1
	elif(i == "Q"):
		v1[16] = v1[16] + 1
	elif(i == "R"):
		v1[17] = v1[17] + 1
	elif(i == "S"):
		v1[18] = v1[18] + 1
	elif(i == "T"):
		v1[19] = v1[19] + 1
	elif(i == "U"):
		v1[20] = v1[20] + 1
	elif(i == "V"):
		v1[21] = v1[21] + 1
	elif(i == "W"):
		v1[22] = v1[22] + 1
	elif(i == "X"):
		v1[23] = v1[23] + 1
	elif(i == "Y"):
		v1[24] = v1[24] + 1
	elif(i == "Z"):
		v1[25] = v1[25] + 1
v2 = zeros(26, dtype=int)
for i in p2:
	if(i == "A"):
		v1[0] = v1[0] - 1
	elif(i == "B"):
		v1[1] = v1[1] - 1
	elif(i == "C"):
		v1[2] = v1[2] - 1
	elif(i == "D"):
		v1[3] = v1[3] - 1
	elif(i == "E"):
		v1[4] = v1[4] - 1
	elif(i == "F"):
		v1[5] = v1[5] - 1
	elif(i == "G"):
		v1[6] = v1[6] - 1
	elif(i == "H"):
		v1[7] = v1[7] - 1
	elif(i == "I"):
		v1[8] = v1[8] - 1
	elif(i == "J"):
		v1[9] = v1[9] - 1
	elif(i == "K"):
		v1[10] = v1[10] - 1
	elif(i == "L"):
		v1[11] = v1[11] - 1
	elif(i == "M"):
		v1[12] = v1[12] - 1
	elif(i == "N"):
		v1[13] = v1[13] - 1
	elif(i == "O"):
		v1[14] = v1[14] - 1
	elif(i == "P"):
		v1[15] = v1[15] - 1
	elif(i == "Q"):
		v1[16] = v1[16] - 1
	elif(i == "R"):
		v1[17] = v1[17] - 1
	elif(i == "S"):
		v1[18] = v1[18] - 1
	elif(i == "T"):
		v1[19] = v1[19] - 1
	elif(i == "U"):
		v1[20] = v1[20] - 1
	elif(i == "V"):
		v1[21] = v1[21] - 1
	elif(i == "W"):
		v1[22] = v1[22] - 1
	elif(i == "X"):
		v1[23] = v1[23] - 1
	elif(i == "Y"):
		v1[24] = v1[24] - 1
	elif(i == "Z"):
		v1[25] = v1[25] - 1
p=0
n=0
i = 0		
for num in v1:
	if(num > 0):
		p = p+1
	elif(num < 0):
		n = n+1
if(p+n >0):
	print(v1)
	print(0)
else:
	print(v1)
	print(1)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 19:36:18) 
-- CODE:
from numpy import *
p1 = input("Digite a palavra 1: ")
p2 = input("Digite a palavra 2: ")
p1 = p1.upper()
p2 = p2.upper()
v1 = zeros(26, dtype=int)
for i in p1:
	if(i == "A"):
		v1[0] = v1[0] + 1
	elif(i == "B"):
		v1[1] = v1[1] + 1
	elif(i == "C"):
		v1[2] = v1[2] + 1
	elif(i == "D"):
		v1[3] = v1[3] + 1
	elif(i == "E"):
		v1[4] = v1[4] + 1
	elif(i == "F"):
		v1[5] = v1[5] + 1
	elif(i == "G"):
		v1[6] = v1[6] + 1
	elif(i == "H"):
		v1[7] = v1[7] + 1
	elif(i == "I"):
		v1[8] = v1[8] + 1
	elif(i == "J"):
		v1[9] = v1[9] + 1
	elif(i == "K"):
		v1[10] = v1[10] + 1
	elif(i == "L"):
		v1[11] = v1[11] + 1
	elif(i == "M"):
		v1[12] = v1[12] + 1
	elif(i == "N"):
		v1[13] = v1[13] + 1
	elif(i == "O"):
		v1[14] = v1[14] + 1
	elif(i == "P"):
		v1[15] = v1[15] + 1
	elif(i == "Q"):
		v1[16] = v1[16] + 1
	elif(i == "R"):
		v1[17] = v1[17] + 1
	elif(i == "S"):
		v1[18] = v1[18] + 1
	elif(i == "T"):
		v1[19] = v1[19] + 1
	elif(i == "U"):
		v1[20] = v1[20] + 1
	elif(i == "V"):
		v1[21] = v1[21] + 1
	elif(i == "W"):
		v1[22] = v1[22] + 1
	elif(i == "X"):
		v1[23] = v1[23] + 1
	elif(i == "Y"):
		v1[24] = v1[24] + 1
	elif(i == "Z"):
		v1[25] = v1[25] + 1
v2 = zeros(26, dtype=int)
for i in p2:
	if(i == "A"):
		v1[0] = v1[0] - 1
	elif(i == "B"):
		v1[1] = v1[1] - 1
	elif(i == "C"):
		v1[2] = v1[2] - 1
	elif(i == "D"):
		v1[3] = v1[3] - 1
	elif(i == "E"):
		v1[4] = v1[4] - 1
	elif(i == "F"):
		v1[5] = v1[5] - 1
	elif(i == "G"):
		v1[6] = v1[6] - 1
	elif(i == "H"):
		v1[7] = v1[7] - 1
	elif(i == "I"):
		v1[8] = v1[8] - 1
	elif(i == "J"):
		v1[9] = v1[9] - 1
	elif(i == "K"):
		v1[10] = v1[10] - 1
	elif(i == "L"):
		v1[11] = v1[11] - 1
	elif(i == "M"):
		v1[12] = v1[12] - 1
	elif(i == "N"):
		v1[13] = v1[13] - 1
	elif(i == "O"):
		v1[14] = v1[14] - 1
	elif(i == "P"):
		v1[15] = v1[15] - 1
	elif(i == "Q"):
		v1[16] = v1[16] - 1
	elif(i == "R"):
		v1[17] = v1[17] - 1
	elif(i == "S"):
		v1[18] = v1[18] - 1
	elif(i == "T"):
		v1[19] = v1[19] - 1
	elif(i == "U"):
		v1[20] = v1[20] - 1
	elif(i == "V"):
		v1[21] = v1[21] - 1
	elif(i == "W"):
		v1[22] = v1[22] - 1
	elif(i == "X"):
		v1[23] = v1[23] - 1
	elif(i == "Y"):
		v1[24] = v1[24] - 1
	elif(i == "Z"):
		v1[25] = v1[25] - 1
p=0
n=0
i = 0		
for num in v1:
	if(num > 0):
		p = p+1
	elif(num < 0):
		n = n+1
if(p+n >0):
	print(v1)
	print(0)
else:
	print(v1)
	print(1)	
-- EXECUTION TIME:
1.05861
-- TEST CASE 1:
---- input:
haline
enilah
---- correct output:
[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
1
---- user output:
[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
